@@ -31,13 +31,22 @@ Then install it:
 
     % make install
 
+On Windows platforms, you should use `dmake` or `nmake`, instead of `make`.
+
 If your perl is system-managed, you can create a local::lib in your home
 directory to install modules to. For details, see the local::lib documentation:
 https://metacpan.org/pod/local::lib
 
+
+The prerequisites of this distribution will also have to be installed manually. The
+prerequisites are listed in one of the files: `MYMETA.yml` or `MYMETA.json` generated
+by running the manual build process described above.
+
 ## Documentation
 
 Dist-Zilla-PluginBundle-Author-DBOOK documentation is available as POD.
-You can run perldoc from a shell to read the documentation:
+You can run `perldoc` from a shell to read the documentation:
 
     % perldoc Dist::Zilla::PluginBundle::Author::DBOOK
+For more information on installing Perl modules via CPAN, please see:
+https://www.cpan.org/modules/INSTALL.html
